Fix some issues with description values in generated yaml